# apophysis-7x

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
crates/flame-core/: Cargo.toml
crates/flame-core/examples/: clockwork.rs  gallery.rs  loadtest.rs  render_demo.rs
crates/flame-core/src/: builtins.rs  curves.rs  flame.rs  genome.rs  lib.rs  load.rs  mutate.rs  registry.rs  render.rs  rng.rs  save.rs  variation.rs  wasm.rs  xml.rs
crates/flame-core/src/plugins/: blur.rs  bwraps.rs  crop.rs  curl.rs  falloff2.rs  julia.rs  macros.rs  misc_a.rs  misc_b.rs  misc_c.rs  mod.rs
docs/: PORT_REVIEW.md
web/: .gitignore  index.html  package.json  vite.config.ts
web/public/: palette-names.json
web/scripts/: check-wasm.mjs  smoke.mjs
web/src/: App.tsx  index.css
web/src/components/: CurvesEditor.tsx  EditorPanel.tsx  MutationGrid.tsx  PaletteStrip.tsx  ParamSlider.tsx  TriangleCanvas.tsx  Viewport.tsx
web/src/components/ui/: button.tsx  slider.tsx  tabs.tsx
web/src/hooks/: useFlame.ts  useRenderer.ts
web/src/lib/: types.ts
web/src/worker/: render.worker.ts
